--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "name": "portablogapi_server",
   "version": "1.0.0",
-  "main": "build/server.js",
+  "main": "build/src/server.js",
   "scripts": {
     "start": "",
-    "dev": "",
     "test": "jest --config jest.config.ts --coverage",
     "build": "rm -rf build/ && tsc"
   },
@@ -15,15 +14,24 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "mongoose": "^8.6.1",
+    "mysql2": "^3.11.0",
+    "nodemailer": "^6.9.15",
+    "sequelize": "^6.37.3"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
+    "@types/mongoose": "^5.11.97",
     "@types/node": "^22.5.4",
+    "@types/nodemailer": "^6.4.15",
+    "@types/sequelize": "^4.28.20",
     "@types/supertest": "^6.0.2",
     "jest": "^29.7.0",
+    "nodemon": "^3.1.4",
+    "sequelize-cli": "^6.6.2",
     "supertest": "^7.0.0",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
